5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1791_1598.log
== TEST (2019-05-29 15:03:18) 
-- CODE:
from numby import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0

while(preco[i] < size[i]):
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = sum(preco[i]) - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numby import*
ModuleNotFoundError: No module named 'numby'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:23) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0

while(preco[i] < size[i]):
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = sum(preco[i]) - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:56) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0

while(i < size[i]):
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = sum(preco[i]) - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:46) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0

while(i < size(preco)):
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = sum(preco[i]) - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:19) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0

while(i < size(preco)):
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = sum(preco) - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:17) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(array)

while(i < size(preco)):
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:01) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(array)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:32) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(array)

while(i < size(preco)):
	
	if(preco[i] > "80"):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:55) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(array)

while(i < size(preco)):
	
	if(preco[i] > 80):
		
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:20) 
-- CODE:
from numpy import*

p = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(array)

while(i < size(p)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:37) 
-- CODE:
from numpy import*

p = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(array)

while(i < size(p)):
	
	if(p[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:19) 
-- CODE:
from numpy import*

p = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(array)

while(i < size(p)):
	
	if(p[i] > 80):
		desc = desc + 5
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:49) 
-- CODE:
from numpy import*

p = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(array)

while(i < size(p)):
	
	if(p[i] > 80):
		desc = desc + 5
		else:
			desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:56) 
-- CODE:
from numpy import*

p = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(array)

while(i < size(p)):
	
	if(p[i] > 80):
		desc = desc + 5
	else:
			desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:05) 
-- CODE:
from numpy import*

p = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(array)

while(i < size(p)):
	
	if(p[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:31) 
-- CODE:
from numpy import*

p = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(p)

while(i < size(p)):
	
	if(p[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:59) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(p)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:12) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:16:19) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:55) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:59) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:43:12) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:44:00) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
		
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:34) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
		
	i = i + 1
	
total = total - desc
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:49) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
		
	i = i + 1
	
total = total - desc
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:45:51) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
		
	i = i + 1
	
total = total - desc
print(round(total, 2))
-- EXECUTION TIME:
3.83621
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:46:04) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- EXECUTION TIME:
1550.57
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:46:04) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- EXECUTION TIME:
1600.64
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:46:04) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- EXECUTION TIME:
1565.77
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:

-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:46:04) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- EXECUTION TIME:
768.866
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:

-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:46:04) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- EXECUTION TIME:
1598.53
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:46:04) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- EXECUTION TIME:
140.438
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:

-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:46:04) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
		
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- EXECUTION TIME:
115.602
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:

-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:

-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:46:04) 
-- CODE:
from numpy import*

preco = array(eval(input("Custo dos itens: ")))

i = 0
desc = 0
total = sum(preco)

while(i < size(preco)):
	
	if(preco[i] > 80):
		desc = desc + 5
	else:
		desc = desc + 0
	i = i + 0
	
total = total - desc

print(round(total, 2))
-- EXECUTION TIME:
813.492
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:

-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:

-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
